--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,6 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-
-
 p,
 li {
   font-size: 18px;
@@ -70,35 +68,46 @@ li {
 
 /* End Reusable Classes */
 
-/* Nav */
-.hero {
-  background-image: url("../images/heroImg.jpg");
+/* Nav/Intro */
+
+.intro {
+  display: flex;
+  background: url("../images/heroImg.jpg"),
+    linear-gradient(to right, rgb(254, 43, 43), rgba(0, 0, 0, 0));
+  height: 500px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
 }
 
-/* End Nav */
-
-/* intro */
-
-.intro {
-  display: flex;
-  background-image: url("../images/heroImg.jpg");
-  height: 500px;
-  align-items: center;
-  text-align: center;
+.intro .links {
+  text-align: end;
+  padding-right: 16px;
 }
+
+.intro a {
+  color: #e0e1dd;
+  text-decoration: none;
+  padding: 8px;
+}
+
+/* align-items: center;
+  text-align: center; */
 
 .heroH2 {
   font-size: 40px;
   color: #e0e1dd;
-  text-shadow: 3px 3px 15px #e0e1dd;
+  text-shadow: 2px 2px 8px #000;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 40%;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
-/* intro */
-
+/* End Nav/Intro */
 
 /* image carousel */
 .imgCarousel {
@@ -120,6 +129,7 @@ li {
 
 .aboutMeContainer {
   background: #2d628b;
+  color: #e0e1dd;
 }
 
 .aboutMeContainer p {
@@ -195,9 +205,6 @@ li {
   flex-direction: column;
 }
 
-#folio .btnDiv {
-}
-
 .btnDiv {
   display: flex;
   justify-content: center;
@@ -215,6 +222,7 @@ li {
 
 .exampleImg img {
   box-shadow: 2px 2px 16px #000;
+  max-width: 100%;
 }
 
 /* End projects */
@@ -227,6 +235,26 @@ li {
 
 /* footer */
 .footer {
+  display: flex;
+  flex-direction: column;
   background-color: #000000;
+  height: 25%;
+}
+
+.footer h2 {
+  color: #e0e1dd;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+}
+
+.footer .links {
+  text-align: center;
+}
+
+.footer a {
+  color: #e0e1dd;
+  text-decoration: none;
+  padding: 8px;
 }
 /* End footer */
