--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@ li {
   text-align: center;
   padding-top: 24px;
   padding-bottom: 0px;
+  max-width: 100%;
 }
 
 /* End Reusable Classes */
@@ -72,9 +73,8 @@ li {
 
 .intro {
   display: flex;
-  background: url("../images/heroImg.jpg"),
-    linear-gradient(to right, rgb(254, 43, 43), rgba(0, 0, 0, 0));
-  height: 500px;
+  background-image: linear-gradient(to bottom, #000, transparent),
+    url(../images/heroImg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -105,6 +105,7 @@ li {
   padding-top: 40%;
   padding-right: 5px;
   padding-left: 5px;
+  max-width: 100%;
 }
 
 /* End Nav/Intro */
@@ -223,6 +224,10 @@ li {
 .exampleImg img {
   box-shadow: 2px 2px 16px #000;
   max-width: 100%;
+}
+
+#folio .exampleImg {
+  padding-bottom: 48px;
 }
 
 /* End projects */
