--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body {
   width: 100%;
   background-color: #e0e1dd;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 
 p,
@@ -15,7 +16,7 @@ li {
 
 .mainButton {
   background-size: 220%;
-  box-shadow: 0 0.2em 0.3em rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.2em 0.3em rgba(0, 0, 0, 0.75);
   color: #da2c38;
   background-color: transparent;
   background-position: 100%;
@@ -44,6 +45,7 @@ li {
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.25);
   background-position: 0;
   color: #e0e1dd;
+  text-shadow: 1px 1px 8px #000;
 }
 
 .mainButton:active {
@@ -85,14 +87,27 @@ li {
   text-align: center;
 }
 
-.intro a {
+.intro .links a {
   color: #e0e1dd;
   text-decoration: none;
   padding: 8px;
 }
 
-/* align-items: center;
-  text-align: center; */
+.intro .links a:hover {
+  color:#da2c38;
+}
+
+.h2Container .heroBtn {
+  display: flex;
+  justify-content: center;
+  padding-top: 48px;
+}
+
+.h2Container .mainButton {
+  text-shadow: 2px 2px 8px #000;
+}
+
+
 
 .heroH2 {
   font-size: 40px;
@@ -101,9 +116,9 @@ li {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding-top: 40%;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-top: 50%;
+  padding-right: 24px;
+  padding-left: 24px;
   max-width: 100%;
 }
 
@@ -171,6 +186,9 @@ li {
     padding-left: 24px;
     margin-top: 0;
   }
+  .intro .links {
+    padding-right: 32px;
+  }
 }
 
 /* End About Me */
@@ -180,18 +198,21 @@ li {
   background-color: #da2c38;
   color: #000;
 }
+.skills .container {
+  padding-top: 0px;
+  max-width: 1480px;
+  align-self: center;
+}
 
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 1rem;
+  grid-gap: 0.1rem;
 }
 .grid > div {
-  /* background:  */
-  padding: 1rem;
   display: grid;
   align-items: center;
-  /* justify-self: center; */
+  justify-self: center;
   text-align: center;
 }
 
@@ -206,7 +227,7 @@ li {
   margin: 0 auto;
 }
 .grid > div > img {
-  width: 70%;
+  width: 40%;
   object-fit: contain;
 }
 
@@ -235,9 +256,13 @@ li {
 .btnDiv {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding-bottom: 32px;
-  padding-top: 24px;
+  padding-bottom: 48px;
+  padding-top: 48px;
+  flex-wrap: wrap;
+}
+
+.btnDiv div {
+  padding: 24px;
 }
 
 .exampleImg {
@@ -245,6 +270,8 @@ li {
   justify-content: center;
   padding-top: 24px;
   padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .exampleImg img {
@@ -257,12 +284,6 @@ li {
 }
 
 /* End projects */
-
-/* experience */
-.experience {
-  background-color: #2d628b;
-}
-/* End experience */
 
 /* footer */
 .footer {
@@ -284,13 +305,23 @@ li {
   text-align: center;
 }
 
-.footer a {
+.footer a,
+script {
   color: #e0e1dd;
   text-decoration: none;
   padding: 8px;
 }
 
+footer a:hover {
+  color:#da2c38;
+}
+
 footer .container {
   padding: 0;
 }
+
+.aBox {
+  padding: 8px;
+}
+
 /* End footer */
