--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,10 @@ li {
 .mainButton {
   background-size: 220%;
   box-shadow: 0 0.2em 0.3em rgba(0, 0, 0, 0.75);
-  color: #000;
+  color: #e0e1dd;
   background-color: transparent;
   background-position: 100%;
-  border: 3px solid #da2c38;
+  border: 3px solid #e0e1dd;
   text-transform: uppercase;
   padding: 8px 16px;
   border-radius: 3px;
@@ -30,8 +30,8 @@ li {
   letter-spacing: 2px;
   background-image: linear-gradient(
     110deg,
-    #da2c38 0%,
-    #da2c38 50%,
+    #e0e1dd 0%,
+    #e0e1dd 50%,
     transparent 50%,
     transparent 100%
   );
@@ -44,8 +44,8 @@ li {
   transform: translateY(-2px);
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.25);
   background-position: 0;
-  color: #e0e1dd;
-  text-shadow: 1px 1px 8px #000;
+  color: #da2c38;
+  /* text-shadow: 1px 1px 8px #000; */
 }
 
 .mainButton:active {
@@ -94,7 +94,7 @@ li {
 }
 
 .intro .links a:hover {
-  color:#da2c38;
+  color: #da2c38;
 }
 
 .h2Container .heroBtn {
@@ -102,15 +102,6 @@ li {
   justify-content: center;
   padding-top: 48px;
 }
-.h2Container .heroBtn a {
-  color: white;
-}
-
-.h2Container .mainButton {
-  text-shadow: 2px 2px 8px #000;
-}
-
-
 
 .heroH2 {
   font-size: 40px;
@@ -146,8 +137,8 @@ li {
 /* About Me */
 
 .aboutMeContainer {
-  background: #2d628b;
-  color: #e0e1dd;
+  background: #e0e1dd;
+  color: #000;
 }
 
 .aboutMeContainer p {
@@ -160,7 +151,7 @@ li {
   flex-direction: column;
 }
 
-.aboutMeContainer img {
+.aboutMeContainer .container img {
   max-width: 100%;
   aspect-ratio: 4/3;
   margin-bottom: 24px;
@@ -181,19 +172,19 @@ li {
   }
   .about-text-container {
     padding-right: 24px;
+    padding-left: 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
   .aboutMeContainer img {
-    padding-left: 24px;
     margin-top: 0;
   }
   .intro .links {
     padding-right: 32px;
   }
   .heroH2 {
-    padding-top: 30%
+    padding-top: 30%;
   }
 }
 
@@ -241,7 +232,8 @@ li {
 
 /* projects */
 .projects {
-  background-color: #e0e1dd;
+  background-color: #2d628b;
+  color: #e0e1dd;
 }
 
 .projectTitle {
@@ -281,7 +273,7 @@ li {
 }
 
 .exampleImg img {
-  box-shadow: 2px 2px 16px #000;
+  box-shadow: 1px 1px 8px #000;
   max-width: 100%;
 }
 
@@ -319,7 +311,7 @@ script {
 }
 
 footer a:hover {
-  color:#da2c38;
+  color: #da2c38;
 }
 
 footer .container {
