--- a/css/index.css
+++ b/css/index.css
@@ -40,12 +40,15 @@ li {
   text-decoration: none;
 }
 
+.profileImg {
+  object-fit:cover;
+}
+
 .mainButton:hover {
   transform: translateY(-2px);
   box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.25);
   background-position: 0;
   color: #da2c38;
-  /* text-shadow: 1px 1px 8px #000; */
 }
 
 .mainButton:active {
@@ -73,7 +76,6 @@ li {
 
 /* Nav/Intro */
 
-
 .intro {
   background-image: linear-gradient(to bottom, #000, transparent),
     url(../images/heroImg.jpg);
@@ -83,11 +85,11 @@ li {
   height: 100%;
 }
 .intro .mCraneLogo {
- text-align: center;
- padding-bottom: 32px;
+  text-align: center;
+  padding-bottom: 32px;
 }
 .mCraneLogo img {
-max-width: 16%;
+  max-width: 16%;
 }
 
 .intro .links {
@@ -99,12 +101,27 @@ max-width: 16%;
   text-decoration: none;
   padding: 8px;
 }
-
+#techBtn a {
+  color:#da2c38;
+}
+#techBtn a:hover{
+  color: #e0e1dd;
+}
+#techBtn a {
+  border: 3px solid #da2c38;
+  background-image: linear-gradient(
+    110deg,
+    #da2c38 0%,
+    #da2c38 50%,
+    transparent 50%,
+    transparent 100%
+  );
+}
 .intro .links a:hover {
   color: #da2c38;
 }
 
-.h2Container .heroBtn {
+.heroBtn {
   display: flex;
   justify-content: center;
   padding-top: 48px;
@@ -164,6 +181,8 @@ max-width: 16%;
   margin-bottom: 24px;
 }
 
+
+
 /* For Desktop*/
 
 @media screen and (min-width: 768px) {
@@ -178,14 +197,19 @@ max-width: 16%;
     flex-direction: row;
   }
   .about-text-container {
-    padding-right: 24px;
-    padding-left: 24px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
+  }
+  .profileImg {
+    flex-basis: 40%
   }
   .aboutMeContainer img {
     margin-top: 0;
+    max-width: 100%;
+  }
+  .aboutMeP{
+    padding-left: 20px;
   }
   .intro .links {
     padding-right: 0px;
@@ -211,7 +235,6 @@ max-width: 16%;
     max-width: 25%;
     margin-left: 1.5rem;
   }
-
 }
 
 /* End About Me */
