--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,9 @@ li {
 }
 
 .imageDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   max-width: 320px;
 }
